--- a/todoList_/todoList_/Base.lproj/Main.storyboard
+++ b/todoList_/todoList_/Base.lproj/Main.storyboard
@@ -17,23 +17,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Todo List" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f9V-du-TFz" userLabel="Todo List">
-                                <rect key="frame" x="10" y="103" width="373" height="35.666666666666657"/>
-                                <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="29"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="24.03.18" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zgK-wQ-neZ">
-                                <rect key="frame" x="10" y="141.66666666666666" width="373" height="30"/>
+                                <rect key="frame" x="10" y="113" width="373" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="6Ge-IZ-uGF"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="AppleSymbols" family="Apple Symbols" pointSize="20"/>
+                                <fontDescription key="fontDescription" name="AppleSymbols" family="Apple Symbols" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="h3J-Wx-g5X">
-                                <rect key="frame" x="10" y="176.66666666666669" width="373" height="641.33333333333326"/>
+                                <rect key="frame" x="10" y="148" width="373" height="670"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TodoTableViewCell" id="0we-Ib-ENV" customClass="TodoTableViewCell" customModule="todoList_" customModuleProvider="target">
@@ -90,20 +84,17 @@
                         <viewLayoutGuide key="safeArea" id="Fkf-ab-2zl"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="f9V-du-TFz" firstAttribute="top" secondItem="Fkf-ab-2zl" secondAttribute="top" id="6sZ-cM-xxo"/>
                             <constraint firstItem="h3J-Wx-g5X" firstAttribute="leading" secondItem="Fkf-ab-2zl" secondAttribute="leading" constant="10" id="EAt-yJ-Iwa"/>
                             <constraint firstItem="zgK-wQ-neZ" firstAttribute="leading" secondItem="Fkf-ab-2zl" secondAttribute="leading" constant="10" id="Gqo-A0-mgc"/>
                             <constraint firstItem="Fkf-ab-2zl" firstAttribute="bottom" secondItem="h3J-Wx-g5X" secondAttribute="bottom" id="Jh4-fK-pcG"/>
                             <constraint firstItem="Fkf-ab-2zl" firstAttribute="trailing" secondItem="h3J-Wx-g5X" secondAttribute="trailing" constant="10" id="R26-CI-cEU"/>
-                            <constraint firstItem="Fkf-ab-2zl" firstAttribute="trailing" secondItem="f9V-du-TFz" secondAttribute="trailing" constant="10" id="Rg2-bS-Zps"/>
-                            <constraint firstItem="f9V-du-TFz" firstAttribute="leading" secondItem="Fkf-ab-2zl" secondAttribute="leading" constant="10" id="bog-qG-PGv"/>
                             <constraint firstItem="Fkf-ab-2zl" firstAttribute="trailing" secondItem="zgK-wQ-neZ" secondAttribute="trailing" constant="10" id="gnV-nX-Ug8"/>
-                            <constraint firstItem="zgK-wQ-neZ" firstAttribute="top" secondItem="f9V-du-TFz" secondAttribute="bottom" constant="3" id="kfk-EZ-qMq"/>
+                            <constraint firstItem="zgK-wQ-neZ" firstAttribute="top" secondItem="Fkf-ab-2zl" secondAttribute="top" constant="10" id="r6o-NZ-fZW"/>
                             <constraint firstItem="h3J-Wx-g5X" firstAttribute="top" secondItem="zgK-wQ-neZ" secondAttribute="bottom" constant="5" id="yQf-iD-lMK"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Syr-Dq-L7J">
-                        <barButtonItem key="leftBarButtonItem" style="done" systemItem="add" id="hxb-CC-Kmh">
+                        <barButtonItem key="leftBarButtonItem" style="done" systemItem="add" hidden="YES" id="hxb-CC-Kmh">
                             <connections>
                                 <action selector="addButtonTapped:" destination="BYZ-38-t0r" id="e8T-Ke-P47"/>
                             </connections>
@@ -116,6 +107,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="addButton" destination="hxb-CC-Kmh" id="zHo-AI-ZLf"/>
                         <outlet property="date" destination="zgK-wQ-neZ" id="H90-ct-cr3"/>
                         <outlet property="editButton" destination="RrL-P6-O5Z" id="FnH-nZ-A43"/>
                         <outlet property="tableview" destination="h3J-Wx-g5X" id="eFc-Cb-Fum"/>
