처음 UI를 빌드할 때 체크 버튼이 데이터에 저장된 상태로 빌드되지 않는 오류를 고침

--- a/todoList_/todoList_/Base.lproj/Main.storyboard
+++ b/todoList_/todoList_/Base.lproj/Main.storyboard
@@ -75,6 +75,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="checkButton" destination="g0D-LF-ubR" id="KXk-VY-QD2"/>
                                             <outlet property="todoText" destination="ArF-u3-bfU" id="Rqy-PK-yZC"/>
                                         </connections>
                                     </tableViewCell>
